#### Don't forget to change the version number in configure.ac! ####

20 Oct 2003 Prevent dyngui unload when gui active - Jan Jaeger
17 Oct 2003 Make sure 'init_hostinfo' called BEFORE 'display_version' - Fish
16 Oct 2003 Always updagte `ints_state' (except PER) with `intlock' held - Greg
13 Oct 2003 fix 'ipending' cmd to display ALL pending interrupts - Fish
13 Oct 2003 dequeue ALL i/o ints in device_reset - Fish
13 Oct 2003 impl.c: terminate w/HHCIN008S if dyngui.dll load fails - Fish
12 Oct 2003 dequeue i/o int fix in device_reset - Jan Jaeger
11 Oct 2003 Added verbose flag to display_version, and set to FALSE on
            standalone utilities - Jay Maynard
07 Oct 2003 Shared library fix for dyninst.c - Jan Jaeger
06 Oct 2003 Enable ia32 assembler assists for -fPIC - Greg Smith
02 Oct 2003 Issue warning message when restoring non-IEBCOPY xmit file
            using dasdload - Greg Smith
01 Oct 2003 Fix segmentation fault using NPTL threads and no console
            device is specified - Greg Smith
29 Sep 2003 Backout STUPID (dangerous) 16 Aug 2003 het changes now that
            configure.ac detects the bug that was causing it - Fish
            (I can't believe I did that; I must have been tired)
27 Sep 2003 Correct Makefile.am Transient variable names to not end
            with automake primaries - Ivan Warren
25 Sep 2003 PowerOff diagnose for 4361 & 937X processors - Tomas Masek by Fish
25 Sep 2003 Fix DASDCOPY bug copying too much to uncompressed FBA o/p - Fish
25 Sep 2003 Fix dasdtab entry for 3310 FBA device type - Fish
25 Sep 2003 Initial power-on reset for mainstor & expanded storage - Fish
25 Sep 2003 Resolve & verify HTTPROOT in config.c before startup - Fish
25 Sep 2003 Fix bug in fbadasd_init_handler causing DASDCOPY crash - Fish
21 Sep 2003 Complete overhaul to the build process  (merge of libtool_exp)
            version set to 2.17.c0
            - A Lot of People (commit by Ivan Warren)